[package]
name = "monocle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = ["derive"] }
cgmath = "0.18.0"
pollster = "0.4.0"
wgpu = "24.0.0"
winit = { version = "0.29", features = ["rwh_05"] }
x11 = { version = "2.21.0", features = ["xlib"] }
